# AssetManager

./: .env  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  implementation.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_asset_lifecycle_fields.py  0003_asset_registry_extensions.py  0004_software_license_management.py  0005_employee_assignees.py  0006_legacy_assignment_user_nullable.py  0007_asset_requests.py  0008_normalize_assignment_schema.py  0009_user_preferences_app_settings.py  0010_opsasset_branding.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  exceptions.py  observability.py
backend/app/db/: session.py
backend/app/models/: asset.py  assignment.py  common.py  employee.py  lookup.py  maintenance.py  preferences.py  request.py  software.py  user.py
backend/app/repositories/: asset.py  assignment.py  employee.py  lookup.py  maintenance.py  preferences.py  request.py  software.py  user.py
backend/app/schemas/: asset.py  auth.py  dashboard.py  employee.py  lookup.py  maintenance.py  preferences.py  request.py  software.py  user.py
backend/app/scripts/: seed.py
backend/app/security/: auth.py  deps.py  passwords.py
backend/app/services/: asset.py  assignment.py  auth.py  dashboard.py  documents.py  email_notifications.py  employees.py  events.py  helpers.py  lookup.py  maintenance.py  preferences.py  request.py  software.py  (+1 more)
backend/asset_manager_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+149 files in other folders)
