[project]
name = "asset-manager-backend"
version = "0.1.0"
description = "Backend API for the Asset Manager MVP"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "PyJWT>=2.9.0,<3.0.0",
  "pymysql>=1.1.1,<2.0.0",
  "python-multipart>=0.0.12,<1.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
